set(CMAKE_C_STANDARD 11)

add_executable(pba-rez rez.c)
add_executable(pba-rez-pc11 rez.c)
target_compile_definitions(pba-rez-pc11 PRIVATE -DPC11)

add_executable(pba-csv csv.c json.h)
add_executable(format0001 format0001.c)
add_executable(format0022 format0022.c)
target_link_libraries(format0022 txc_dxtn)
add_executable(format0024 format0024.c)
add_executable(format0025 format0025.c)
add_executable(format002A format002A.c json.h)
add_executable(format002C format002C.c)
target_link_libraries(format002C m)
add_executable(format008D format008D.c)
